fix for occassionally the comment group header overlapping text

--- a/client/views/commentary/commentary.import.less
+++ b/client/views/commentary/commentary.import.less
@@ -120,7 +120,7 @@ header .line-wrap {
   .comment-group-meta-inner-fixed {
     position: fixed;
     top: 70px;
-    left: 4%;
+    left: 6%;
 		z-index:1;
   }
 
@@ -326,7 +326,7 @@ article.lemma-comment {
   padding: 0;
   margin: 20px 0 20px 10%;
   background: @light;
-  width: 75%;
+  width: 74%;
   text-align: left;
   .transition(all 300ms ease-out);
   position: relative;
